      to Yves-Alexis Perez for the suggestion.  (Closes: #766099)
  * data/standards-version/release-dates:
    + [AB] Add 3.9.8.

  * debian/control:
    + [AB] Declare compliance with Debian Policy 3.9.8. (No other changes
      required.)

  * lib/Lintian/Check.pm:
    + [JW,NT] Flag a duplicate word as a spelling error.  This affects
      several tags plus spellintian.  (Closes: #800476)

 -- Niels Thykier <niels@thykier.net>  Sun, 03 Apr 2016 18:48:59 +0000

lintian (2.5.43) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - maybe-not-arch-all-binnmuable
    + Removed:
      - dh_desktop-is-deprecated
      - dh_undocumented-is-obsolete
      - restriction-formula-with-debhelper-with-conflicting-version
      - restriction-formula-with-versioned-dpkg-dev-conflict

  * checks/{control-file,fields}.{desc,pm}:
    + [JW] Remove confusing checks for build-conflicts related to build
      profiles.
  * checks/debhelper.{desc,pm}:
    + [NT] Remove check for dh_undocumented and dh_desktop as debhelper
      has dropped the helper.
  * checks/systemd.pm:
    + [JW] Apply patch from Felipe Sateler to properly remove .sh suffix
      when checking systemd-initscript matching.  (Closes: #819087)
  * checks/version-substvars.{desc,pm}:
    + [NT] Add an experimental tag to check for arch:all
      binNMUability.  This is currently not supported at all
      and there is no known fix for the tag.  That said, it
      is still useful for determining how many packages might
      be affected by it in case Debian will support arch:all
      binNMUs.

  * commands/reporting-sync-state.pm:
    + [NT] Use the sha256 instead of the sha1 checksum field
      for finding related files and checking which members
      have changed.
    + [NT] Support reading Packages.xz and Sources.xz files.

  * data/spelling/corrections:
    + [JW] Add more corrections.
      Thanks to Mattia Rizzolo for suggesting one of them.

  * frontend/dplint: